--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="medium_green">#689c9f</color>
     <color name="dark_green">#317578</color>
+    <color name="orange">#ce8b74</color>
 </resources>
