--- a/app/src/main/res/layout/activity_running.xml
+++ b/app/src/main/res/layout/activity_running.xml
@@ -27,4 +27,141 @@
         android:layout_marginEnd="45dp"
         app:labelVisibilityMode="unlabeled"/>
 
+    <ImageButton
+        android:id="@+id/stoprun"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@drawable/rounded_button"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:foreground="@drawable/close"
+        android:visibility="gone"/>
+
+    <LinearLayout
+        android:id="@+id/runningbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:background="@drawable/rounded_rectangle"
+        android:layout_marginStart="45dp"
+        android:layout_marginEnd="45dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="30dp"
+        android:visibility="gone">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="Timing"
+            android:textAlignment="center"
+            android:textColor="@color/white" />
+
+        <TextView
+            android:id="@+id/timerid"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="01 : 09 : 44"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:fontFamily="@font/opensansbold"
+            android:textAlignment="center"/>
+
+        <GridLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:columnCount="3"
+            android:rowCount="1"
+            android:layout_gravity="center"
+            android:layout_marginBottom="16dp">
+
+            <LinearLayout
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:background="@drawable/rounded_rectangle"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="km"
+                    android:gravity="center"
+                    android:textColor="#dedede"
+                    android:fontFamily="@font/opensansbold"
+                    android:padding="8dp"
+                    tools:ignore="HardcodedText" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="10.9"
+                    android:background="@drawable/rounded_rectangle_dark"
+                    android:gravity="center"
+                    android:textColor="@android:color/white"
+                    android:fontFamily="@font/opensansbold"
+                    android:padding="8dp"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:background="@drawable/rounded_rectangle"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="kcal"
+                    android:gravity="center"
+                    android:textColor="#dedede"
+                    android:fontFamily="@font/opensansbold"
+                    android:padding="8dp"
+                    tools:ignore="HardcodedText" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="216"
+                    android:gravity="center"
+                    android:textColor="@android:color/white"
+                    android:background="@drawable/rounded_rectangle_dark"
+                    android:fontFamily="@font/opensansbold"
+                    android:padding="8dp"/>
+            </LinearLayout>
+
+            <!-- Third Rectangle -->
+            <LinearLayout
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/rounded_rectangle"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="km/h"
+                    android:gravity="center"
+                    android:textColor="#dedede"
+                    android:fontFamily="@font/opensansbold"
+                    android:padding="8dp"
+                    tools:ignore="HardcodedText" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="12.3"
+                    android:gravity="center"
+                    android:textColor="@android:color/white"
+                    android:background="@drawable/rounded_rectangle_dark"
+                    android:fontFamily="@font/opensansbold"
+                    android:padding="8dp"/>
+            </LinearLayout>
+
+        </GridLayout>
+
+    </LinearLayout>
+
 </RelativeLayout>
