--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -6,23 +6,337 @@
     android:layout_height="match_parent"
     tools:context=".SettingsActivity">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true"
+        android:background="@drawable/rounded_rectangle_dark"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="30dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="40dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginBottom="55dp">
+
+            <!-- Your fixed views (non-extendable) -->
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Main Information"
+                android:textSize="16sp"
+                android:fontFamily="@font/opensansbold"
+                android:textColor="@color/white"
+                android:textAlignment="center"
+                android:layout_marginTop="40dp"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <com.example.runapp.CircularImageView
+                    android:id="@+id/roundedPicture"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:src="@drawable/picture"
+                    android:scaleType="fitXY"
+                    android:layout_marginStart="20dp"/>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:layout_marginTop="20dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Name:"
+                        android:textSize="14sp"
+                        android:fontFamily="@font/opensans"
+                        android:textColor="@color/white"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Chapter:"
+                        android:textSize="14sp"
+                        android:fontFamily="@font/opensans"
+                        android:textColor="@color/white"
+                        android:layout_marginTop="2dp"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Character:"
+                        android:textSize="14sp"
+                        android:fontFamily="@font/opensans"
+                        android:textColor="@color/white"
+                        android:layout_marginTop="2dp"/>
+
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:layout_marginTop="20dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="  Name Surname  "
+                        android:textSize="14sp"
+                        android:fontFamily="@font/opensansbold"
+                        android:textColor="@color/white"
+                        android:background="@drawable/rounded_rectangle"
+                        android:layout_gravity="right"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="  Chapter 1  "
+                        android:textSize="14sp"
+                        android:fontFamily="@font/opensansbold"
+                        android:textColor="@color/white"
+                        android:background="@drawable/rounded_rectangle"
+                        android:layout_marginTop="5dp"
+                        android:layout_gravity="right"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="  Alchemist 4  "
+                        android:textSize="14sp"
+                        android:fontFamily="@font/opensansbold"
+                        android:textColor="@color/white"
+                        android:background="@drawable/rounded_rectangle"
+                        android:layout_marginTop="5dp"
+                        android:layout_gravity="right"/>
+                </LinearLayout>
+            </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@color/medium_green"/>
+
+
+            <!-- Extendable content -->
+
+            <ScrollView
+                android:id="@+id/scrollViewRoutes"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.15"
+                android:clickable="true">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Routes"
+                        android:textSize="16sp"
+                        android:fontFamily="@font/opensansbold"
+                        android:textColor="@color/white"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="15dp" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/ic_arrow_down"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginBottom="15dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_marginEnd="20dp"/>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:background="@color/medium_green"
+                        android:layout_alignParentBottom="true"/>
+                </RelativeLayout>
+
+
+            </ScrollView>
+
+            <ScrollView
+                android:id="@+id/scrollViewSneakers"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.15">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Sneakers"
+                        android:textSize="16sp"
+                        android:fontFamily="@font/opensansbold"
+                        android:textColor="@color/white"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="15dp"/>
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/ic_arrow_down"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginBottom="15dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_marginEnd="20dp"/>
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:background="@color/medium_green"
+                        android:layout_alignParentBottom="true"/>
+                </RelativeLayout>
+
+            </ScrollView>
+            <ScrollView
+                android:id="@+id/scrollViewGoals"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.15">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Goals"
+                        android:textSize="16sp"
+                        android:fontFamily="@font/opensansbold"
+                        android:textColor="@color/white"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="15dp"/>
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/ic_arrow_down"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginBottom="15dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_marginEnd="20dp"/>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:background="@color/medium_green"
+                        android:layout_alignParentBottom="true"/>
+                </RelativeLayout>
+
+            </ScrollView>
+
+            <ScrollView
+                android:id="@+id/scrollViewStatistic"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.15">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Statistic"
+                        android:textSize="16sp"
+                        android:fontFamily="@font/opensansbold"
+                        android:textColor="@color/white"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="15dp"/>
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/ic_arrow_down"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginBottom="15dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_marginEnd="20dp"/>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:background="@color/medium_green"
+                        android:layout_alignParentBottom="true"/>
+                </RelativeLayout>
+
+            </ScrollView>
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.15">
+
+
+            </ScrollView>
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.15">
+
+
+            </ScrollView>
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.15">
+
+
+            </ScrollView>
+
+        </LinearLayout>
+    </ScrollView>
+    <RelativeLayout
+        android:id="@+id/textset"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
-        android:text="SETTINGS" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/rounded_rectangle">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:text="Settings"
+            android:textSize="30sp"
+            android:fontFamily="@font/opensansbold"
+            android:textAlignment="center"
+            android:padding="5dp"
+            android:textColor="@color/white"
+            tools:ignore="HardcodedText" />
+
+    </RelativeLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationViewSettings"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:background="@drawable/rounded_rectangle"
-        android:layout_marginBottom="30dp"
         app:itemIconTint="@color/white"
         app:itemTextColor="@color/white"
+        android:layout_alignParentBottom="true"
         app:menu="@menu/bottom_navigation_menu"
-        android:layout_marginStart="50dp"
+        android:layout_marginStart="40dp"
         android:layout_marginEnd="40dp"
+        android:layout_marginBottom="30dp"
         app:labelVisibilityMode="unlabeled"/>
+
 </RelativeLayout>
