--- a/app/src/main/res/layout/activity_running.xml
+++ b/app/src/main/res/layout/activity_running.xml
@@ -137,7 +137,7 @@
                     tools:ignore="HardcodedText" />
 
                 <TextView
-                    android:id="@+id/speed"
+                    android:id="@+id/speedV"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="0"
