--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -130,13 +130,14 @@
             <!-- Extendable content -->
 
             <ExpandableListView
-                android:id="@+id/expandableListViewRoutes"
+                android:id="@+id/eListView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/textset"
                 android:layout_marginTop="10dp"
                 android:layout_marginStart="40dp"
                 android:layout_marginEnd="40dp"
+                android:layoutDirection="rtl"
                 android:clickable="true"/>
 
 <!--            &lt;!&ndash; Sneakers section &ndash;&gt;-->
