--- a/app/src/main/res/layout/run_popup_menu.xml
+++ b/app/src/main/res/layout/run_popup_menu.xml
@@ -66,6 +66,7 @@
                 android:layout_gravity="center_horizontal"
                 android:text="Get the \n ingredients"
                 android:fontFamily="@font/opensansbold"
+                android:textColor="@color/white"
                 android:layout_marginStart="30dp"
                 android:backgroundTint="@color/orange"
                 android:layout_marginEnd="30dp"
@@ -82,6 +83,7 @@
                 android:backgroundTint="@color/orange"
                 android:background="@drawable/rounded_button"
                 android:fontFamily="@font/opensansbold"
+                android:textColor="@color/white"
                 android:text="Potion making"
                 android:textSize="15sp"
                 tools:ignore="TouchTargetSizeCheck" />
@@ -117,6 +119,7 @@
                 android:text="Explore the \nlocations"
                 android:backgroundTint="@color/orange"
                 android:fontFamily="@font/opensansbold"
+                android:textColor="@color/white"
                 android:layout_marginStart="30dp"
                 android:layout_marginEnd="30dp"
                 android:layout_marginTop="10dp"
@@ -131,6 +134,7 @@
                 android:layout_marginEnd="30dp"
                 android:background="@drawable/rounded_button"
                 android:fontFamily="@font/opensansbold"
+                android:textColor="@color/white"
                 android:text="Get scrolls"
                 android:backgroundTint="@color/orange"
                 android:textSize="15sp"
@@ -167,6 +171,7 @@
                 android:text="Earn loyalty \npoints"
                 android:backgroundTint="@color/orange"
                 android:fontFamily="@font/opensansbold"
+                android:textColor="@color/white"
                 android:layout_marginStart="30dp"
                 android:layout_marginEnd="30dp"
                 android:layout_marginTop="10dp"
