--- a/app/src/main/res/layout/route_child_list.xml
+++ b/app/src/main/res/layout/route_child_list.xml
@@ -9,7 +9,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/topics_tv"
+        android:id="@+id/route_child_tv"
         android:text="Topics TextView"
         android:textColor="@color/white"
         android:fontFamily="@font/opensansbold"
