--- a/app/src/main/res/layout/route_list.xml
+++ b/app/src/main/res/layout/route_list.xml
@@ -7,12 +7,21 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/chapter_tv"
+        android:id="@+id/route_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/opensansbold"
         android:text="Chapter TextView"
         android:textColor="@color/white"
         android:textSize="26sp" />
+
+    <TextView
+        android:id="@+id/footer_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/opensansbold"
+        android:text="+ Add new route"
+        android:textColor="@color/white"
+        android:textSize="14sp" />
 
 </LinearLayout>
