Guild layout added

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -207,6 +207,7 @@
         </RelativeLayout>
 
         <RelativeLayout
+            android:id="@+id/openGuild"
             android:layout_width="72dp"
             android:layout_height="72dp"
             android:layout_marginBottom="20dp"
